# recurvis

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  build.gradle  gradle.properties  install_allegro.sh  run.sh  settings.gradle
allegro_wrapper/include/: app.hpp  window.hpp
src/allegro_wrapper/headers/: window.hpp
src/allegw/: app.cpp  color.cpp  display.cpp  drawable.cpp  init.cpp  rect.cpp
src/allegw/headers/: app.hpp  color.hpp  display.hpp  drawable.hpp  init.hpp  rect.hpp
src/main/: Makefile  allegro_app.cpp  allegro_window.cpp  app.cpp  main.cpp  window.cpp
src/main/cpp/: main.cpp
src/main/headers/: allegro_window.hpp  app.hpp  window.hpp
src/rv/: card.cpp  drawable.cpp  visulizer.cpp
src/rv/headers/: card.hpp  drawable.hpp  visualizer.hpp
src/test/: singletonTest.cpp
src/ui/cpp/: API_Implement.cpp  AbstractApp.cpp  AbstractGpuInstance.cpp  AppGpuInstanceBuilder.cpp  GlfwApp.cpp  GlfwWindow.cpp  Surface.cpp  VulkanGpuInstance.cpp  VulkanSurface.cpp  allegro_window.cpp  glfw_error.cpp  opengl_app.cpp  opengl_window.cpp  window.cpp  window_interface.cpp  window_updater.cpp
src/ui/headers/: API_Implement.h  AbstractApp.hpp  AbstractGpuInstance.h  AbstractWindow.hpp  GlfwApp.h  GlfwWindow.h  Surface.h  VulkanGpuInstance.h  allegro_app.hpp  allegro_window.hpp  app_interface.hpp  glfw_error.h  glfw_with_vulkan.h  opengl_app.h  opengl_window.h  window.hpp  window_interface.hpp  window_updater.h
src/ui/headers/internal/: AppGpuInstanceBuilder.h  VulkanSurface.h
src/util/cpp/: Logger.cpp  Version.cpp
src/util/headers/: Logger.h  Version.h
src/vulkan-api/cpp/: ConcurrentSwapchain.cpp  ConcurrentSwapchainCreateInfoBuilder.cpp  DefaultSwapchainCreateInfoBuilder.cpp  ImageView.cpp  Instance.cpp  InstanceBuilder.cpp  InstanceBuilderDebug.cpp  InstanceBuilderDirector.cpp  LogicalDevice.cpp  PhysicalDevice.cpp  SwapChain.cpp  SwapchainCreateInfoBuilder.cpp  SwapchainCreateInfoBuilderDirector.cpp  VulkanError.cpp  util.cpp
src/vulkan-api/headers/: ConcurrentSwapchain.h  ConcurrentSwapchainCreateInfoBuilder.h  DefaultSwapchainCreateInfoBuilder.h  ImageView.h  Instance.h  InstanceBuilder.h  InstanceBuilderDebug.h  InstanceBuilderDirector.h  LogicalDevice.h  PhysicalDevice.h  SwapChain.h  SwapchainCreateInfoBuilder.h  SwapchainCreateInfoBuilderDirector.h  VulkanError.h  util.h
